update：1、导航主题dark、light切换 2、页面布局：导航在左在上的切换 3、Header是否固定的切换 4、页面内容定宽还是流式的切换 5、主题色切换

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="dt-stack">
   <link href="assets/images/favicon.ico" type="image/x-icon" rel="icon">
   <link href="assets/images/favicon.ico" type="image/x-icon" rel="shortcut icon">
+  <link rel="stylesheet/less" href="assets/css/variables.less" />   
   <title>袋鼠云日志－高性能可扩展的日志集中、搜索和分析平台</title>
 </head>
 <body>
